--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coreason_manifest"
-version = "0.6.0"
+version = "0.7.0"
 description = "This package is the definitive source of truth. If it isn't in the manifest, it doesn't exist. If it violates the manifest, it doesn't run."
 authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
 license = "Prosperity-3.0"
@@ -11,14 +11,8 @@ packages = [{include = "coreason_manifest", from = "src"}]
 python = ">=3.12, <3.15"
 loguru = "^0.7.2"
 pydantic = "^2.12.5"
-jsonschema = "^4.26.0"
 pyyaml = "^6.0.3"
-anyio = "^4.12.1"
 coreason-identity = "^0.4.1"
-httpx = "^0.28.1"
-aiofiles = "^23.2.1"
-fastapi = "^0.128.0"
-uvicorn = "^0.40.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.2"
@@ -29,8 +23,8 @@ mkdocs = "^1.6.1"
 mkdocs-material = "^9.7.1"
 pydantic = "^2.12.5"
 mypy = "^1.19.1"
-types-aiofiles = "^23.2.0"
 pytest-asyncio = "^1.3.0"
+types-pyyaml = "^6.0.12.20250915"
 
 [build-system]
 requires = ["poetry-core"]
@@ -38,7 +32,7 @@ build-backend = "poetry.core.masonry.api"
 
 [project]
 name = "coreason_manifest"
-version = "0.6.0"
+version = "0.7.0"
 description = "This package is the definitive source of truth. If it isn't in the manifest, it doesn't exist. If it violates the manifest, it doesn't run."
 readme = "README.md"
 requires-python = ">=3.12"
