Evaluation-Ready Metadata Implementation (#296)
* feat: add EvaluationProfile and SuccessCriterion metadata to AgentDefinition

- Created `src/coreason_manifest/spec/v2/evaluation.py` with `EvaluationProfile` and `SuccessCriterion` models.
- Updated `AgentDefinition` in `src/coreason_manifest/spec/v2/definitions.py` to include the `evaluation` field.
- Updated `src/coreason_manifest/__init__.py` to export the new models.
- Added `tests/test_evaluation_metadata.py` to verify serialization, validation, and integration.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
     - Stream Identity & Lifecycle: cap/stream_lifecycle.md
     - Memory Governance: memory_governance.md
     - Session Management: session_management.md
+    - Evaluation Metadata: evaluation_metadata.md
     - Request Lineage Implementation: request_lineage_implementation.md
     - Observability & Tracing: observability.md
     - Frontend Integration & Graph Events: frontend_integration.md
