Feat: Add Mermaid.js visualization export (#314)
* Add Mermaid.js visualization export utility for AgentDefinition (ManifestV2).

This change introduces `generate_mermaid_graph` in `src/coreason_manifest/utils/viz.py` to generate Mermaid.js flowcharts from ManifestV2 objects. It includes strict typing, sanitization, and compliance with the specified styling. The utility is exported via `src/coreason_manifest/__init__.py`.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - Core Documentation:
     - Usage Guide: usage.md
     - Builder SDK: builder_sdk.md
+    - Visualization Tools: visualization.md
     - Secure Composition: composition.md
     - Governance & Policy: governance_policy_enforcement.md
     - Agent Card Generator: agent_card_generator.md
