Implement Semantic Diffing Utility (#315)
* Implement Semantic Diffing Utility for Agent Definitions

- Add `DiffChange`, `DiffReport`, and `ChangeCategory` models.
- Implement `compare_agents` function in `src/coreason_manifest/utils/diff.py` to recursively compare `ManifestV2` or `AgentDefinition` objects.
- Add categorization logic for BREAKING (interface), GOVERNANCE (policy), RESOURCE (pricing), FEATURE (additions), and PATCH changes.
- Ensure robust handling of None values and removed blocks (fixing potential crashes).
- Export new utilities in `src/coreason_manifest/__init__.py`.
- Add comprehensive test suite `tests/test_semantic_diff.py` covering various change scenarios.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
     - Visualization Tools: visualization.md
     - Secure Composition: composition.md
     - Governance & Policy: governance_policy_enforcement.md
+    - Semantic Diffing: semantic_diffing.md
     - Agent Card Generator: agent_card_generator.md
   - Specifications & Protocols:
     - CAM Specification: cap/specification.md
