--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,12 @@ pydantic = "^2.12.5"
 pyyaml = "^6.0.3"
 jsonschema = "^4.19.0"
 
+[tool.poetry.group.mcp]
+optional = true
+
+[tool.poetry.group.mcp.dependencies]
+mcp = "^1.26.0"
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^9.0.2"
 ruff = "^0.14.14"
